Alter css for breathe.html

--- a/breathe.html
+++ b/breathe.html
@@ -35,6 +35,11 @@
             showTimerForm()
         }
     </script>
+    <style>
+        .center-column {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body onload="start()">
